// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render a different name, prompt, and beta tag if provided 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  fallbackOnEmptyString={true}
  formats={Object {}}
  locale="en"
  messages={Object {}}
  onError={[Function]}
  onWarn={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <Header
    docLinks={
      Object {
        "links": Object {
          "noDocumentation": Object {
            "indexPatterns": Object {},
          },
        },
      }
    }
    indexPatternName="test index pattern"
    isBeta={true}
    prompt={
      <div>
        Test prompt
      </div>
    }
  >
    <div>
      <EuiText
        size="s"
      >
        <div
          className="euiText euiText--small"
        >
          <h1>
            Create test index pattern
             
            <EuiBetaBadge
              label="Beta"
            >
              <span
                className="euiBetaBadge euiBetaBadge--hollow"
                title="Beta"
              >
                Beta
              </span>
            </EuiBetaBadge>
          </h1>
        </div>
      </EuiText>
      <EuiSpacer
        size="s"
      >
        <div
          className="euiSpacer euiSpacer--s"
        />
      </EuiSpacer>
      <Description
        docLinks={
          Object {
            "links": Object {
              "noDocumentation": Object {
                "indexPatterns": Object {},
              },
            },
          }
        }
      >
        <EuiText>
          <div
            className="euiText euiText--medium"
          >
            <p>
              <FormattedMessage
                defaultMessage="An index pattern can match a single source, for example, {single}, or {multiple} data sources, {star}."
                id="indexPatternManagement.createIndexPattern.description"
                values={
                  Object {
                    "multiple": <strong>
                      multiple
                    </strong>,
                    "single": <EuiCode>
                      filebeat-4-3-22
                    </EuiCode>,
                    "star": <EuiCode>
                      filebeat-*
                    </EuiCode>,
                  }
                }
              >
                An index pattern can match a single source, for example, 
                <EuiCode
                  key=".$.1"
                >
                  <EuiCodeBlockImpl
                    inline={true}
                  >
                    <span>
                      <code>
                        filebeat-4-3-22
                      </code>
                    </span>
                  </EuiCodeBlockImpl>
                </EuiCode>
                , or 
                <strong
                  key=".$.3"
                >
                  multiple
                </strong>
                 data sources, 
                <EuiCode
                  key=".$.5"
                >
                  <EuiCodeBlockImpl
                    inline={true}
                  >
                    <span>
                      <code>
                        filebeat-*
                      </code>
                    </span>
                  </EuiCodeBlockImpl>
                </EuiCode>
                .
              </FormattedMessage>
              <br />
              <EuiLink
                external={true}
                target="_blank"
              >
                <button
                  className="euiLink euiLink--primary"
                  disabled={false}
                  type="button"
                >
                  <FormattedMessage
                    defaultMessage="Read documentation"
                    id="indexPatternManagement.createIndexPattern.documentation"
                  >
                    Read documentation
                  </FormattedMessage>
                </button>
              </EuiLink>
            </p>
          </div>
        </EuiText>
      </Description>
      <EuiSpacer
        size="m"
      >
        <div
          className="euiSpacer euiSpacer--m"
        />
      </EuiSpacer>
      <div>
        Test prompt
      </div>
    </div>
  </Header>
</IntlProvider>
`;

exports[`Header should render normally 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  fallbackOnEmptyString={true}
  formats={Object {}}
  locale="en"
  messages={Object {}}
  onError={[Function]}
  onWarn={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <Header
    docLinks={
      Object {
        "links": Object {
          "noDocumentation": Object {
            "indexPatterns": Object {},
          },
        },
      }
    }
    indexPatternName="test index pattern"
  >
    <div>
      <EuiText
        size="s"
      >
        <div
          className="euiText euiText--small"
        >
          <h1>
            Create test index pattern
          </h1>
        </div>
      </EuiText>
      <EuiSpacer
        size="s"
      >
        <div
          className="euiSpacer euiSpacer--s"
        />
      </EuiSpacer>
      <Description
        docLinks={
          Object {
            "links": Object {
              "noDocumentation": Object {
                "indexPatterns": Object {},
              },
            },
          }
        }
      >
        <EuiText>
          <div
            className="euiText euiText--medium"
          >
            <p>
              <FormattedMessage
                defaultMessage="An index pattern can match a single source, for example, {single}, or {multiple} data sources, {star}."
                id="indexPatternManagement.createIndexPattern.description"
                values={
                  Object {
                    "multiple": <strong>
                      multiple
                    </strong>,
                    "single": <EuiCode>
                      filebeat-4-3-22
                    </EuiCode>,
                    "star": <EuiCode>
                      filebeat-*
                    </EuiCode>,
                  }
                }
              >
                An index pattern can match a single source, for example, 
                <EuiCode
                  key=".$.1"
                >
                  <EuiCodeBlockImpl
                    inline={true}
                  >
                    <span>
                      <code>
                        filebeat-4-3-22
                      </code>
                    </span>
                  </EuiCodeBlockImpl>
                </EuiCode>
                , or 
                <strong
                  key=".$.3"
                >
                  multiple
                </strong>
                 data sources, 
                <EuiCode
                  key=".$.5"
                >
                  <EuiCodeBlockImpl
                    inline={true}
                  >
                    <span>
                      <code>
                        filebeat-*
                      </code>
                    </span>
                  </EuiCodeBlockImpl>
                </EuiCode>
                .
              </FormattedMessage>
              <br />
              <EuiLink
                external={true}
                target="_blank"
              >
                <button
                  className="euiLink euiLink--primary"
                  disabled={false}
                  type="button"
                >
                  <FormattedMessage
                    defaultMessage="Read documentation"
                    id="indexPatternManagement.createIndexPattern.documentation"
                  >
                    Read documentation
                  </FormattedMessage>
                </button>
              </EuiLink>
            </p>
          </div>
        </EuiText>
      </Description>
    </div>
  </Header>
</IntlProvider>
`;

exports[`Header should render without including system indices 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  fallbackOnEmptyString={true}
  formats={Object {}}
  locale="en"
  messages={Object {}}
  onError={[Function]}
  onWarn={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <Header
    docLinks={
      Object {
        "links": Object {
          "noDocumentation": Object {
            "indexPatterns": Object {},
          },
        },
      }
    }
    indexPatternName="test index pattern"
  >
    <div>
      <EuiText
        size="s"
      >
        <div
          className="euiText euiText--small"
        >
          <h1>
            Create test index pattern
          </h1>
        </div>
      </EuiText>
      <EuiSpacer
        size="s"
      >
        <div
          className="euiSpacer euiSpacer--s"
        />
      </EuiSpacer>
      <Description
        docLinks={
          Object {
            "links": Object {
              "noDocumentation": Object {
                "indexPatterns": Object {},
              },
            },
          }
        }
      >
        <EuiText>
          <div
            className="euiText euiText--medium"
          >
            <p>
              <FormattedMessage
                defaultMessage="An index pattern can match a single source, for example, {single}, or {multiple} data sources, {star}."
                id="indexPatternManagement.createIndexPattern.description"
                values={
                  Object {
                    "multiple": <strong>
                      multiple
                    </strong>,
                    "single": <EuiCode>
                      filebeat-4-3-22
                    </EuiCode>,
                    "star": <EuiCode>
                      filebeat-*
                    </EuiCode>,
                  }
                }
              >
                An index pattern can match a single source, for example, 
                <EuiCode
                  key=".$.1"
                >
                  <EuiCodeBlockImpl
                    inline={true}
                  >
                    <span>
                      <code>
                        filebeat-4-3-22
                      </code>
                    </span>
                  </EuiCodeBlockImpl>
                </EuiCode>
                , or 
                <strong
                  key=".$.3"
                >
                  multiple
                </strong>
                 data sources, 
                <EuiCode
                  key=".$.5"
                >
                  <EuiCodeBlockImpl
                    inline={true}
                  >
                    <span>
                      <code>
                        filebeat-*
                      </code>
                    </span>
                  </EuiCodeBlockImpl>
                </EuiCode>
                .
              </FormattedMessage>
              <br />
              <EuiLink
                external={true}
                target="_blank"
              >
                <button
                  className="euiLink euiLink--primary"
                  disabled={false}
                  type="button"
                >
                  <FormattedMessage
                    defaultMessage="Read documentation"
                    id="indexPatternManagement.createIndexPattern.documentation"
                  >
                    Read documentation
                  </FormattedMessage>
                </button>
              </EuiLink>
            </p>
          </div>
        </EuiText>
      </Description>
    </div>
  </Header>
</IntlProvider>
`;
